# Varg

./: .gitignore  AGENTS.md  AI_NATIVE_ARCHITECTURE.md  AUDIT_REPORT.md  COMPLETE_DECLARATIVE_SYSTEM.md  CONTEXT.md  Cargo.toml  FINAL_SUMMARY.md  IMPLEMENTATION_REPORT.md  LLM_OPTIMIZATION_SUMMARY.md  MISSION_COMPLETE.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-Hant.md  design-qa.md
.cargo/: config.toml
.ralph/: prd.json  progress.txt
.ralph-tui/: config.toml  progress.md  session-meta.json  session.json
crates/engine-ai/: Cargo.toml
crates/engine-ai/src/: lib.rs  parser.rs  providers.rs  registry.rs  skills.rs  system_prompt.rs  system_prompt_base.txt  tool_runtime.rs  tools.rs
crates/engine-ai/src/system_skills/combat-encounter/: SKILL.md
crates/engine-ai/src/system_skills/game-feel-juice/: SKILL.md
crates/engine-ai/src/system_skills/level-layout/: SKILL.md
crates/engine-ai/src/system_skills/playable-prototype/: SKILL.md
crates/engine-animation/: Cargo.toml
crates/engine-animation/src/: lib.rs
crates/engine-assets/: Cargo.toml
crates/engine-assets/src/: amdl.rs  lib.rs  registry.rs  resource_trait.rs  resource_types.rs
crates/engine-audio/: Cargo.toml
crates/engine-audio/src/: acoustics.rs  bus.rs  decode.rs  device.rs  effects.rs  lib.rs  renderer.rs  spatial.rs  stream.rs  stream_player.rs  synth.rs  types.rs  voice.rs
crates/engine-audio/src/hrtf/: convolver.rs  dataset.rs  mod.rs
crates/engine-audio/src/render/: hrtf_renderer.rs  mod.rs  stereo_renderer.rs
crates/engine-cli/: Cargo.toml
crates/engine-cli/src/: main.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: config.rs  handle.rs  ids.rs  lib.rs  logging.rs  math.rs  task.rs  time.rs
crates/engine-ecs/: Cargo.toml
crates/engine-ecs/src/: lib.rs  object_store.rs  scene.rs  schema.rs  transform.rs  world.rs
crates/engine-ecs/tests/: scene_serialization.rs
crates/engine-editor/: Cargo.toml
crates/engine-editor-ui/: Cargo.toml
crates/engine-editor-ui/src/: fonts.rs  hub.rs  lib.rs  shell.rs
crates/engine-editor-ui/src/shell/: copilot_engine.rs  mod.rs  types.rs  ui.rs
crates/engine-editor-ui/src/shell/operations/: command.rs
crates/engine-editor-ui/src/shell/panels/: copilot.rs  dialogs.rs  hierarchy.rs  inspector.rs  mod.rs  project.rs  toolbar.rs  viewport.rs
crates/engine-editor-ui/src/shell/widgets/: buttons.rs  layout.rs
crates/engine-editor/src/: agent.rs  lib.rs  memory.rs  physics.rs  render.rs  ui_state.rs
crates/engine-packager/: Cargo.toml
crates/engine-packager/src/: lib.rs
crates/engine-physics/: Cargo.toml
crates/engine-physics/examples/: stress_benchmark.rs
crates/engine-physics/src/: backend.rs  character.rs  collision.rs  destruction.rs  filters.rs  fluid.rs  fracture.rs  joints.rs  layers.rs  lib.rs  material.rs  rapier_backend.rs  simple.rs  stats.rs  tests.rs  types.rs  vehicle.rs  world.rs
crates/engine-platform/: Cargo.toml
crates/engine-platform/src/: action_context.rs  filesystem.rs  gamepad.rs  input.rs  input_buffer.rs  input_map.rs  lib.rs  window.rs
crates/engine-policy/: Cargo.toml
crates/engine-policy/src/: grant.rs
crates/engine-render/: Cargo.toml
crates/engine-render-2d/: Cargo.toml
crates/engine-render-2d/src/: camera2d.rs  lib.rs  light2d.rs  render_world_2d.rs  sprite.rs  tilemap.rs
crates/engine-render-wgpu/: Cargo.toml
crates/engine-render-wgpu/examples/: benchmark_4k120.rs  viewport_path_perf.rs
crates/engine-render-wgpu/src/: batches.rs  constructors.rs  device.rs  device_trait.rs  diagnostics.rs  format.rs  ibl.rs  lib.rs  lifecycle.rs  light_preparation.rs  math.rs  meshes.rs  particles.rs  passes.rs  post.rs  render.rs  scene_uniforms.rs  shaders.rs  tests.rs  uniforms.rs
crates/engine-render-wgpu/tests/: p0_rendering_test.rs  render_test.rs  surface_test.rs  upscaling_test.rs
crates/engine-render/src/: graph.rs  lib.rs  performance.rs  resource.rs  scaling.rs  target.rs  visibility.rs
crates/engine-script-declarative/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  STATUS.md
crates/engine-script-declarative/examples/: basic_usage.rs  complete_system.rs  export_schema.rs  simple_test.rs
crates/engine-script-declarative/src/: action.rs  assets.rs  behavior.rs  compiler.rs  condition.rs  lib.rs  presets.rs  project.rs  runtime.rs  scene.rs  schema.rs  systems.rs  ui.rs
crates/engine-script-rhai/: Cargo.toml
crates/engine-script-rhai/src/: lib.rs
crates/engine-script-rhai/src/threesh/: geometry.rs  material.rs  mod.rs  scene.rs  vector3.rs
crates/engine-script-varg/: Cargo.toml
crates/engine-script-varg/src/: lib.rs
crates/engine-shader/: Cargo.toml
crates/engine-shader/src/: codegen.rs  ir.rs  lib.rs  material.rs  material_instance.rs  parser.rs  tokenizer.rs
crates/engine-skeleton/: Cargo.toml
crates/engine-skeleton/src/: lib.rs
crates/runtime-min/: Cargo.toml
crates/runtime-min/src/: lib.rs  main.rs
crates/runtime-min/tests/: physics_simulation.rs  render_graph.rs  run_project.rs  services.rs  smoke.rs
doc/: project-decisions-and-scope.md  rust-engine-task-index.md  task-10-editor-ui-hub.md
docs/: TODO.md  ai-agent-unified-spec.md  ai-editor-copilot-prd.md  ai-editor-quest-prd.md  ai-native-engine-loop-progress.md  ai-tool-discovery-modeling-plan.md  architecture-unreal-lessons.md  aster-script-family-spec.md  game-making-impact-requirements.md  llm-behavior-prompts.md  (+8 more)
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/linux/: com.varg.editor.desktop
editor/src-tauri/src/: app.rs  editor_compositor.rs  game_window.rs  lib.rs  main.rs  native_host_window.rs  quest.rs  scene_window.rs  state.rs  wayland_embedded_compositor.rs
editor/src-tauri/src/commands/: copilot.rs  dialogs.rs  mod.rs  quest_ai.rs  quest_execution.rs  rpc.rs  viewport.rs  windows.rs
editor/src-tauri/src/host/: console.rs  copilot.rs  mod.rs  project.rs  quest.rs  runtime.rs  shell.rs  viewport.rs
editor/src-tauri/tests/: editor_host_rpc.rs
(+121 files in other folders)
