[workspace]
members = [
    "crates/engine-core",
    "crates/engine-ecs",
    "crates/engine-platform",
    "crates/engine-assets",
    "crates/engine-render",
    "crates/runtime-min",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rownix101/Aster"
rust-version = "1.78"

[workspace.dependencies]
bitflags = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
tracing = "0.1"

engine-core = { path = "crates/engine-core", version = "0.1.0" }
engine-ecs = { path = "crates/engine-ecs", version = "0.1.0" }
engine-platform = { path = "crates/engine-platform", version = "0.1.0" }
engine-assets = { path = "crates/engine-assets", version = "0.1.0" }
engine-render = { path = "crates/engine-render", version = "0.1.0" }

[workspace.metadata.aster.profiles]
runtime-min = ["runtime-min/runtime-min"]
runtime-game = ["runtime-min/runtime-game"]
editor = ["runtime-min/editor"]
agent-tools = ["runtime-min/agent-tools"]
script-python = ["runtime-min/script-python"]
dev-full = ["runtime-min/dev-full"]
