[workspace]
members = [
    "crates/engine-core",
    "crates/engine-ecs",
    "crates/engine-platform",
    "crates/engine-assets",
    "crates/engine-render",
    "crates/engine-render-wgpu",
    "crates/engine-physics",
    "crates/engine-audio",
    "crates/engine-editor",
    "crates/engine-i18n",
    "crates/engine-script-varg",
    "crates/engine-script-declarative",
    "crates/engine-shader",
    "crates/engine-render-2d",
    "crates/engine-ui",
    "crates/engine-animation",
    "crates/engine-skeleton",
    "crates/engine-agent-cluster",
    "crates/engine-ai",
    "crates/engine-policy",
    "crates/engine-packager",
    "editor/src-tauri",
    "crates/runtime-min",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/viloris-org/Varg"
rust-version = "1.85"

[workspace.dependencies]
bitflags = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
gltf = { version = "1.4", default-features = false, features = ["import", "utils", "names"] }
gilrs = "0.11.2"
winit = "0.30.13"
wgpu = "29.0.3"
bytemuck = { version = "1.25", features = ["derive"] }
pollster = "0.4"
rapier3d = "0.22.0"
notify = "6.1"
cpal = "0.15.3"
symphonia = { version = "0.5.4", default-features = false, features = ["ogg", "pcm", "vorbis", "wav"] }

engine-core = { path = "crates/engine-core", version = "0.1.0" }
engine-ecs = { path = "crates/engine-ecs", version = "0.1.0" }
engine-platform = { path = "crates/engine-platform", version = "0.1.0" }
engine-assets = { path = "crates/engine-assets", version = "0.1.0" }
engine-render = { path = "crates/engine-render", version = "0.1.0" }
engine-render-wgpu = { path = "crates/engine-render-wgpu", version = "0.1.0" }
engine-physics = { path = "crates/engine-physics", version = "0.1.0" }
engine-audio = { path = "crates/engine-audio", version = "0.1.0" }
engine-editor = { path = "crates/engine-editor", version = "0.1.0" }
engine-i18n = { path = "crates/engine-i18n", version = "0.1.0" }
engine-script-varg = { path = "crates/engine-script-varg", version = "0.1.0" }
engine-script-declarative = { path = "crates/engine-script-declarative", version = "0.1.0" }
engine-shader = { path = "crates/engine-shader", version = "0.1.0" }
engine-render-2d = { path = "crates/engine-render-2d", version = "0.1.0" }
engine-ui = { path = "crates/engine-ui", version = "0.1.0" }
engine-animation = { path = "crates/engine-animation", version = "0.1.0" }
engine-skeleton = { path = "crates/engine-skeleton", version = "0.1.0" }
engine-agent-cluster = { path = "crates/engine-agent-cluster", version = "0.1.0" }
engine-ai = { path = "crates/engine-ai", version = "0.1.0" }
engine-policy = { path = "crates/engine-policy", version = "0.1.0" }
engine-packager = { path = "crates/engine-packager", version = "0.1.0" }
runtime-min = { path = "crates/runtime-min", version = "0.1.0" }

[workspace.metadata.aster.profiles]
runtime-min = ["runtime-min/runtime-min"]
runtime-game = ["runtime-min/runtime-game"]
editor = ["runtime-min/editor"]
agent-tools = ["runtime-min/agent-tools"]
dev-full = ["runtime-min/dev-full"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
