[package]
name = "engine-animation"
description = "Aster animation system: keyframes, clips, blending, and tweens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
runtime-min = ["engine-core/runtime-min"]
runtime-game = ["runtime-min"]
editor = ["engine-core/editor"]
dev-full = ["runtime-game", "editor"]

[dependencies]
engine-core.workspace = true
serde.workspace = true
