[package]
name = "engine-assets"
description = "Aster asset identifiers, paths, and manifest primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
runtime-min = ["engine-core/runtime-min"]
runtime-game = ["runtime-min"]
editor = ["engine-core/editor"]
agent-tools = ["engine-core/agent-tools"]
script-python = ["engine-core/script-python"]
fbx-importer = []
assimp-importer = []
heavy-importers = ["fbx-importer", "assimp-importer"]
dev-full = [
    "runtime-game",
    "editor",
    "agent-tools",
    "script-python",
    "engine-core/dev-full",
    "heavy-importers",
]

[dependencies]
engine-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
