[package]
name = "engine-audio"
description = "Aster audio abstraction and null backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
runtime-min = []
runtime-game = ["runtime-min", "device-output"]
editor = []
dev-full = ["runtime-game", "editor"]
device-output = ["dep:cpal"]

[dependencies]
cpal = { workspace = true, optional = true }
engine-core.workspace = true
serde.workspace = true
symphonia.workspace = true
