[package]
name = "engine-cli"
description = "Aster native command-line launcher and build smoke entry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-core.workspace = true
engine-editor = { workspace = true, optional = true }
engine-editor-ui = { workspace = true, optional = true }
runtime-min.workspace = true
egui = { workspace = true, optional = true }
egui-winit = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
egui-wgpu = { version = "0.34", optional = true }
engine-render = { workspace = true, optional = true }
engine-render-wgpu = { workspace = true, optional = true }
pollster = { version = "0.4", optional = true }
rfd = { version = "0.15", optional = true }

[features]
default = ["runtime-game"]
runtime-min = ["runtime-min/runtime-min"]
runtime-game = ["runtime-min/runtime-game", "wgpu"]
wgpu = ["runtime-min/wgpu"]
editor = [
    "runtime-min/editor",
    "engine-editor/editor",
    "engine-editor-ui/editor",
    "dep:egui",
    "dep:egui-winit",
    "dep:winit",
    "dep:egui-wgpu",
    "dep:engine-render",
    "dep:engine-render-wgpu",
    "dep:pollster",
    "dep:rfd"

]
agent-tools = ["runtime-min/agent-tools", "engine-editor/agent-tools"]
script-python = ["runtime-min/script-python"]
dev-full = [
    "runtime-game",
    "editor",
    "agent-tools",
    "script-python",
    "runtime-min/dev-full",
    "engine-editor/dev-full",
    "engine-editor-ui/dev-full",
]
