[package]
name = "engine-core"
description = "Aster engine core runtime primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
runtime-min = []
runtime-game = ["runtime-min"]
editor = []
agent-tools = []
script-python = []
dev-full = ["runtime-game", "editor", "agent-tools", "script-python"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
