[package]
name = "engine-ecs"
description = "Aster atomic ECS and scene storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
runtime-min = ["engine-core/runtime-min"]
runtime-game = ["runtime-min"]
physics = ["dep:engine-physics"]
audio = ["dep:engine-audio"]
editor = ["engine-core/editor"]
agent-tools = ["engine-core/agent-tools"]
dev-full = ["runtime-game", "editor", "agent-tools", "engine-core/dev-full", "physics", "audio"]

[dependencies]
engine-core.workspace = true
engine-physics = { workspace = true, optional = true }
engine-audio = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
