[package]
name = "engine-editor-ui"
description = "Aster hub and editor UI state shell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
editor = ["engine-editor/editor", "engine-core/editor", "dep:egui"]
dev-full = ["editor", "engine-editor/dev-full", "engine-core/dev-full"]

[dependencies]
engine-assets.workspace = true
engine-core.workspace = true
engine-ecs.workspace = true
engine-editor.workspace = true
engine-i18n.workspace = true
engine-render.workspace = true
egui = { workspace = true, optional = true }
serde_json.workspace = true
toml.workspace = true
