[package]
name = "engine-editor-ui"
description = "Aster hub and editor UI state shell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
editor = ["engine-editor/editor", "engine-core/editor", "dep:egui", "dep:egui-phosphor"]
dev-full = ["editor", "engine-editor/dev-full", "engine-core/dev-full"]

[dependencies]
engine-ai.workspace = true
engine-assets.workspace = true
engine-core.workspace = true
engine-ecs.workspace = true

engine-editor.workspace = true
engine-i18n.workspace = true
engine-render.workspace = true
egui = { workspace = true, optional = true }
egui-phosphor = { version = "0.12", optional = true }
serde_json.workspace = true
toml.workspace = true
