[package]
name = "engine-editor"
description = "Aster editor service layer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
editor = ["engine-core/editor"]
agent-tools = ["engine-core/agent-tools"]
dev-full = ["editor", "agent-tools", "engine-core/dev-full"]

[dependencies]
engine-core.workspace = true
engine-i18n.workspace = true
engine-render.workspace = true
serde.workspace = true
toml.workspace = true
