[package]
name = "engine-editor"
description = "Aster editor service layer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
editor = ["engine-assets/importers", "engine-core/editor"]
agent-tools = ["engine-core/agent-tools"]
dev-full = ["editor", "agent-tools", "engine-core/dev-full"]
physics = ["dep:engine-physics", "engine-ecs/physics"]

[dependencies]
engine-assets = { workspace = true, default-features = false }
engine-core.workspace = true
engine-ecs.workspace = true
engine-i18n.workspace = true
engine-physics = { workspace = true, optional = true }
engine-render.workspace = true
engine-script-varg.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
