[package]
name = "engine-physics"
description = "Varg physics abstraction and null backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
runtime-min = []
runtime-game = ["runtime-min", "rapier"]
editor = []
rapier = ["dep:rapier3d"]
dev-full = ["runtime-game", "editor"]

[dependencies]
engine-core.workspace = true
bitflags.workspace = true
serde.workspace = true
rapier3d = { workspace = true, optional = true }

[[example]]
name = "stress_benchmark"
required-features = ["rapier"]
