[package]
name = "engine-platform"
description = "Aster platform capability abstractions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitflags.workspace = true
engine-core.workspace = true
gilrs = { workspace = true, optional = true }
winit = { workspace = true, optional = true }

[features]
default = []
runtime-min = ["engine-core/runtime-min"]
runtime-game = ["runtime-min", "dep:gilrs", "dep:winit"]
editor = ["engine-core/editor", "dep:winit"]
agent-tools = ["engine-core/agent-tools"]
script-python = ["engine-core/script-python"]
dev-full = ["runtime-game", "editor", "agent-tools", "script-python", "engine-core/dev-full"]
