[package]
name = "engine-render-2d"
description = "Aster 2D rendering pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
runtime-min = ["engine-core/runtime-min"]
runtime-game = ["runtime-min"]
editor = ["engine-core/editor"]
dev-full = ["runtime-game", "editor"]

[dependencies]
engine-core.workspace = true
engine-ecs.workspace = true
engine-render.workspace = true
serde.workspace = true
