[package]
name = "engine-render"
description = "Aster render abstraction boundary"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
runtime-min = ["engine-core/runtime-min"]
runtime-game = ["runtime-min"]
editor = ["engine-core/editor"]
agent-tools = ["engine-core/agent-tools"]
dev-full = ["runtime-game", "editor", "agent-tools", "engine-core/dev-full"]

[dependencies]
engine-core.workspace = true
engine-ecs.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
