[package]
name = "engine-script-rhai"
description = "Aster Rhai script backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
script-rhai = []

[dependencies]
engine-core.workspace = true
engine-ecs.workspace = true
engine-platform.workspace = true
engine-physics.workspace = true
engine-assets.workspace = true
engine-audio.workspace = true
engine-animation.workspace = true
engine-ui.workspace = true
engine-editor.workspace = true
rhai.workspace = true
