[package]
name = "engine-script-varg"
description = "Varg language parser and diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-core.workspace = true
engine-platform.workspace = true
serde.workspace = true
serde_json.workspace = true
