[package]
name = "engine-shader"
description = "Aster shader compiler and material system"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
runtime-min = ["engine-core/runtime-min"]
runtime-game = ["runtime-min"]
editor = ["engine-core/editor"]
dev-full = ["runtime-game", "editor"]

[dependencies]
engine-core.workspace = true
serde.workspace = true
serde_json.workspace = true
