[package]
name = "runtime-min"
description = "Aster minimal runtime build path"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["runtime-min"]
runtime-min = [
    "engine-assets/runtime-min",
    "engine-core/runtime-min",
    "engine-ecs/runtime-min",
    "engine-platform/runtime-min",
    "engine-render/runtime-min",
]
runtime-game = [
    "runtime-min",
    "engine-assets/runtime-game",
    "engine-core/runtime-game",
    "engine-ecs/runtime-game",
    "engine-platform/runtime-game",
    "engine-render/runtime-game",
    "dep:winit",
]
wgpu = [
    "runtime-game",
    "dep:engine-render-wgpu",
]
physics = [
    "dep:engine-physics",
    "engine-physics/runtime-game",
    "engine-ecs/physics",
]
audio = [
    "dep:engine-audio",
    "engine-audio/runtime-game",
    "engine-ecs/audio",
]
editor = [
    "engine-assets/editor",
    "engine-core/editor",
    "engine-ecs/editor",
    "dep:engine-editor",
    "engine-editor/editor",
    "engine-platform/editor",
    "engine-render/editor",
]
agent-tools = [
    "engine-assets/agent-tools",
    "engine-core/agent-tools",
    "engine-ecs/agent-tools",
    "dep:engine-ai",
    "dep:engine-editor",
    "engine-editor/agent-tools",
    "engine-platform/agent-tools",
    "engine-render/agent-tools",
]
script-python = [
    "engine-assets/script-python",
    "engine-core/script-python",
    "engine-ecs/script-python",
    "engine-platform/script-python",
    "engine-render/script-python",
]
script-rhai = [
    "dep:engine-script-rhai",
    "dep:engine-editor",
]
shader = ["dep:engine-shader", "engine-shader/runtime-game"]
render-2d = ["dep:engine-render-2d", "engine-render-2d/runtime-game"]
ui = ["dep:engine-ui", "engine-ui/runtime-game"]
animation = ["dep:engine-animation", "engine-animation/runtime-game"]
skeleton = ["dep:engine-skeleton", "engine-skeleton/runtime-game"]
dev-full = ["runtime-game", "editor", "agent-tools", "script-python", "script-rhai", "physics", "audio", "shader", "render-2d", "ui", "animation", "skeleton"]

[dependencies]
engine-assets.workspace = true
engine-audio = { workspace = true, optional = true }
engine-core.workspace = true
engine-ecs.workspace = true
engine-ai = { workspace = true, optional = true }
engine-editor = { workspace = true, optional = true }
engine-physics = { workspace = true, optional = true }
engine-platform.workspace = true
engine-render.workspace = true
engine-render-wgpu = { workspace = true, optional = true }
engine-script-rhai = { workspace = true, optional = true }
engine-shader = { workspace = true, optional = true }
engine-render-2d = { workspace = true, optional = true }
engine-ui = { workspace = true, optional = true }
engine-animation = { workspace = true, optional = true }
engine-skeleton = { workspace = true, optional = true }
serde_json.workspace = true
toml.workspace = true
winit = { workspace = true, optional = true }
