[package]
name = "aster-editor-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "aster-editor-tauri"

[lib]
name = "aster_editor_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64 = "0.22"
ureq = { version = "3", features = ["json"] }

image = { workspace = true, default-features = false, features = ["png"] }

rfd = "0.17"

engine-ai.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

engine-core.workspace = true
engine-ecs.workspace = true
engine-editor.workspace = true
engine-script-rhai.workspace = true
engine-i18n.workspace = true
engine-render.workspace = true
engine-render-wgpu.workspace = true
engine-assets.workspace = true
winit.workspace = true
wgpu.workspace = true
runtime-min = { workspace = true, features = ["editor", "wgpu", "physics", "script-rhai"] }

[dev-dependencies]
tempfile = "3"
