[package]
name = "varg-editor-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "varg-editor-tauri"

[lib]
name = "varg_editor_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
wayland-embedded-compositor = ["dep:smithay", "dep:wayland-egl", "smithay/backend_winit"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "unstable"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64 = "0.22"
ureq = { version = "3", features = ["json"] }

image = { workspace = true, default-features = false, features = ["png"] }

rfd = "0.17"
raw-window-handle = "0.6"

engine-ai.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

engine-core.workspace = true
engine-ecs.workspace = true
engine-editor.workspace = true
engine-script-varg.workspace = true
engine-i18n.workspace = true
engine-packager.workspace = true
engine-render.workspace = true
engine-render-wgpu.workspace = true
engine-assets.workspace = true
winit.workspace = true
wgpu.workspace = true
runtime-min = { workspace = true, features = ["editor", "wgpu", "physics"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
gdkwayland-sys = "0.18"
gdkx11-sys = "0.18"
x11 = { version = "2.21", features = ["xlib"] }
smithay = { version = "0.7.0", default-features = false, features = ["renderer_gl", "use_system_lib", "wayland_frontend"], optional = true }
wayland-egl = { version = "0.32.7", optional = true }

[dev-dependencies]
tempfile = "3"
